// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecaptchaPrivacyLinks component When 'de' country code is provided renders German Recaptcha policy text and urls 1`] = `
<p
  class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
>
  Diese Website ist durch reCAPTCHA geschützt und es gelten die 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/privacy?hl=de-de"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Datenschutzbestimmungen
    </span>
  </a>
   und 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/terms?hl=de-de"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Nutzungsbedingungen
    </span>
  </a>
   von Google.
</p>
`;

exports[`RecaptchaPrivacyLinks component When 'fi' country code is provided renders Finnish Recaptcha policy text and urls 1`] = `
<p
  class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
>
  Tätä sivustoa suojaa reCAPTCHA, ja siihen sovelletaan Googlen 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/privacy?hl=fi-fi"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      tietosuojakäytäntöä
    </span>
  </a>
   ja 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/terms?hl=fi-fi"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      käyttöehtoja
    </span>
  </a>
  .
</p>
`;

exports[`RecaptchaPrivacyLinks component When 'fr' country code is provided renders French Recaptcha policy text and urls 1`] = `
<p
  class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
>
  Ce site est protégé par reCAPTCHA et la 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/privacy?hl=fr-fr"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      politique de confidentialité
    </span>
  </a>
   et les 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/terms?hl=fr-fr"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      conditions d'utilisation
    </span>
  </a>
   de Google s'appliquent.
</p>
`;

exports[`RecaptchaPrivacyLinks component When 'it' country code is provided renders Italian Recaptcha policy text and urls 1`] = `
<p
  class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
>
  Questo sito è protetto da reCAPTCHA e si applicano le 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/privacy?hl=it-it"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Norme sulla privacy
    </span>
  </a>
   e i 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/terms?hl=it-it"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Termini di servizio
    </span>
  </a>
   di Google.
</p>
`;

exports[`RecaptchaPrivacyLinks component When 'no' country code is provided renders Norwegian Recaptcha policy text and urls 1`] = `
<p
  class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
>
  Dette nettstedet er beskyttet av reCAPTCHA og Googles 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/privacy?hl=no-nb"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Personvernregler
    </span>
  </a>
   og 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/terms?hl=no-nb"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Vilkår for bruk
    </span>
  </a>
   gjelder.
</p>
`;

exports[`RecaptchaPrivacyLinks component When invalid country code is provided renders English Recaptcha policy text and urls 1`] = `
<p
  class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
>
  This site is protected by reCAPTCHA and the Google 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/privacy"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Privacy Policy
    </span>
  </a>
   and 
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="https://policies.google.com/terms"
    rel="noreferrer"
    target="_blank"
  >
    <span>
      Terms of Service
    </span>
  </a>
   apply.
</p>
`;
